Simplify to extension-only app, add Xenon.init()

--- a/extensions/xenon-capture/shopify.extension.toml
+++ b/extensions/xenon-capture/shopify.extension.toml
@@ -10,3 +10,8 @@ type = "object"
 name = "API Key"
 description = "XenonView API Key"
 type = "single_line_text_field"
+
+[settings.fields.debug]
+name = "Debug"
+description = "XenonView Debug Logging"
+type = "single_line_text_field"
