Updates for checkout and purchase

--- a/extensions/xenon-capture/package.json
+++ b/extensions/xenon-capture/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-web-pixel",
+  "name": "xenon-capture",
   "version": "1.0.0",
   "main": "dist/main.js",
   "license": "UNLICENSED",
