Add purchaseOnly settings option

--- a/extensions/xenon-capture/shopify.extension.toml
+++ b/extensions/xenon-capture/shopify.extension.toml
@@ -15,3 +15,8 @@ type = "single_line_text_field"
 name = "Debug"
 description = "XenonView Debug Logging"
 type = "single_line_text_field"
+
+[settings.fields.purchaseOnly]
+name = "Purchase Only"
+description = "XenonView report purchase events only"
+type = "single_line_text_field"
